// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` getVp with delegation 1`] = `
Object {
  "vp": 10.077130335431244,
  "vp_by_strategy": Array [
    0,
    10.028706352441185,
    0,
    0.04842398299005922,
  ],
  "vp_state": "final",
}
`;

exports[` getVp without delegation 1`] = `
Object {
  "vp": 20.491128299590727,
  "vp_by_strategy": Array [
    0,
    9.998985610441185,
    10.443718706159482,
    0.04842398299005922,
  ],
  "vp_state": "final",
}
`;
